# activity_to_kinetics

./: .gitignore  README.md  hej.xlsx  kinetic_results.xlsx  pyproject.toml  requirements.txt  user_interface.py
data/raw/: Template_data_file.xlsx
src/activity_to_kinetics/: __main__.py  cli.py  file_loading.py  kinetic_model_fitting.py  main.py  plot_generator.py  rate_calculation.py  units.py  utility_functions.py  validation.py
