[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-to-kinetics"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7.2",
  "numpy>=1.25.1",
  "openpyxl>=3.1.2",
  "pandas>=2.0.3",
  "pint>=0.22",
  "scikit-learn>=1.3.0",
  "scipy>=1.16.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
atk = "activity_to_kinetics.__main__:main_entry"